[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-env"
version = "1.0.0"
description = "DevOps Incident Response"
authors = [{name = "saiamogh7"}]
dependencies = [
    "fastapi",
    "openenv-core>=0.2.0",
    "pydantic",
    "requests",
    "openai"
]

[project.scripts]
server = "server.main:app"
